2002-12-09  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* configure.ac: only run AM_PATH_PYTHON(1.5) if python is enabled.

	* bindings/Makefile.am: if enable_tcl is not yes, then no attempt is
	  made to create pkgIndex.tcl. This should fix the problems Joao was
	  having in an environment without tcl.  Later this should be
	  changed to depend on the more general has_tcl instead, but AWI's
	  opinion is that has_tcl is broken in sysloc.in at the moment so we
	  will stick with depending on enable_tcl for a while.

	* src/plcore.c: Change from lt_dlopen to lt_dlopenext for more
	  cross-platform suffix generality.

	* sysloc.in: has_tcl is now set to enable_tcl.

	* bindings/Makefile.am: pkgIndex.tcl now only built if tcl enabled.

	* utils/Makefile.am: pltcl now only built if tcl enabled.

	* src/plcore.c: Comment out premature removal of libltdl resources
	  in plend since plinit may be called again after a call to plend.  In
	  fact there is no way to guarantee any particular call to plend is
	  the last so these libltdl resources must always remain allocated
	  until the overall programme exits.

2002-12-07  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* drivers/Makefile.am: Make tk and tkwin static drivers work. This
	  completes the static drivers configuration.

	* bindings/t*/pkgIndex.tcl.in: search for Pltk and Plplotter entry
	  points in libplplot if a search in the dynamic drivers fails.
	  This is required for static drivers since in that case the entry 
	  points (and drivers) are put in libplplot.
	  
	* PROBLEMS: reorganization and updating to help set our priorities
	  for what must be accomplished before the next release.

2002-12-06  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

        * Configure test executables in examples for c++, f77, and tk.  make
	  check builds the uninstalled c, c++, f77, and tk examples fine,
	  and plplot-test.sh works with these uninstalled examples with some
	  limitations that are discussed on list.
